--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -12,6 +12,7 @@
       - fish
       - fzf
       - awscli
+      - bluesnooze
 
 - name: set git user
   ansible.builtin.command: git config --global user.name "esplo"
