--- a/roles/mac_os/tasks/keyboard.yml
+++ b/roles/mac_os/tasks/keyboard.yml
@@ -2,14 +2,14 @@
   community.general.osx_defaults:
     domain: NSGlobalDomain
     key: KeyRepeat
-    type: int
+    type: float
     value: 10
 
 - name: InitialKeyRepeat
   community.general.osx_defaults:
     domain: NSGlobalDomain
     key: InitialKeyRepeat
-    type: int
+    type: float
     value: 20
 
 - name: NSAutomaticCapitalizationEnabled
