--- a/roles/mac_os/tasks/keyboard.yml
+++ b/roles/mac_os/tasks/keyboard.yml
@@ -1,16 +1,24 @@
-- name: KeyRepeat
-  community.general.osx_defaults:
+## 別の型で設定されているとエラーになるので一度消す
+
+- community.general.osx_defaults:
     domain: NSGlobalDomain
     key: KeyRepeat
-    type: float
-    value: 10
+    state: absent
+- community.general.osx_defaults:
+    domain: NSGlobalDomain
+    key: KeyRepeat
+    type: int
+    value: 3
 
-- name: InitialKeyRepeat
-  community.general.osx_defaults:
+- community.general.osx_defaults:
     domain: NSGlobalDomain
     key: InitialKeyRepeat
-    type: float
-    value: 20
+    state: absent
+- community.general.osx_defaults:
+    domain: NSGlobalDomain
+    key: InitialKeyRepeat
+    type: int
+    value: 10
 
 - name: NSAutomaticCapitalizationEnabled
   community.general.osx_defaults:
