--- a/roles/mac_os/tasks/main.yml
+++ b/roles/mac_os/tasks/main.yml
@@ -9,15 +9,15 @@
   community.general.osx_defaults:
     domain: com.apple.finder
     key: AppleShowAllFiles
-    type: string
-    value: "TRUE"
+    type: bool
+    value: true
 
 - name: AppleShowAllExtensions
   community.general.osx_defaults:
     domain: NSGlobalDomain
     key: AppleShowAllExtensions
-    type: string
-    value: "TRUE"
+    type: bool
+    value: true
 
 - name: NSTableViewDefaultSizeMode
   community.general.osx_defaults:
