--- a/roles/mac_os/tasks/dock.yml
+++ b/roles/mac_os/tasks/dock.yml
@@ -23,15 +23,15 @@
   community.general.osx_defaults:
     domain: com.apple.dock
     key: tilesize
-    type: int
-    value: 32
+    type: float
+    value: 32.0
 
 - name: largesize
   community.general.osx_defaults:
     domain: com.apple.dock
     key: largesize
-    type: int
-    value: 64
+    type: float
+    value: 64.0
 
 - name: magnification
   community.general.osx_defaults:
